--- a/index.html
+++ b/index.html
@@ -5,15 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
-    <script type="module" src="/script.js" defer></script>
+    <script src="data.js" defer></script>
+    <script src="script.js" defer></script>
     <title>RPG-JS</title>
 </head>
 <body>
 <div class="rpg">
-    <div class="container">
-        <div class="rpg__title">rpg-js</div>
-        <div class="rpg__char">
-            <ul class="char__info-list">
+    <div class="rpg__start">
+        <div class="start__info">
+            <h1>RPG-GAME</h1>
+            <div class="start__pick">
+                    <label for="name">Введите имя персонажа:</label>
+                    <input type="text" name="name" id="name">
+
+                    <div class="pick__race">
+                        <h4>Выберите расу:</h4>
+                        <div class="race-field">
+                            <label for="mc1">Человек</label>
+                            <input type="radio" name="field" id="mc1">
+                        </div>
+                        <div class="race-field">
+                            <label for="mc2">Эльф</label>
+                            <input type="radio" name="field" id="mc2">
+                        </div>
+                        <div class="race-field">
+                            <label for="mc3">Гном</label>
+                            <input type="radio" name="field" id="mc3">
+                        </div>
+                    </div>
+                    <button id="startGame">Применить</button>
+            </div>
+        </div>
+        <div class="rpg__wrapper">
+            <div class="rpg__title">rpg-js</div>
+            <div class="rpg__char">
+                <ul class="char__info-list">
                     <li class="char__info-item">Имя</li>
                     <li class="char__info-item">Тип персонажа</li>
                     <li class="char__info-item">Здоровье</li>
@@ -21,23 +47,29 @@
                     <li class="char__info-item">Защита</li>
                     <li class="char__info-item">Уровень</li>
                     <li class="char__info-item">Инвентарь</li>
-            </ul>
-            <div class="char__controls">
-                <button class="controls__attack">Атаковать</button>
-                <button class="controls__defense">Защищаться</button>
-                <button class="controls__use-item">Использовать предмет</button>
+                </ul>
+                <div class="char__controls">
+                    <button class="controls__attack cnt-btn" disabled>Атаковать</button>
+                    <button class="controls__defense cnt-btn" disabled>Защищаться</button>
+                    <button class="controls__use-item cnt-btn" disabled>Использовать предмет</button>
+                </div>
+            </div>
+            <div class="rpg__location">
+                <div class="location__now">Текущаяя локация: Выберите локацию</div>
+                <div class="location__ways">
+                    <button class="location__bush way-btn">Осмотреть кусты</button>
+                    <button class="location__wood way-btn">Пойти навстречу шуму</button>
+                </div>
+                <div class="location__buttons">
+                    <button class="location__wood loc-btn">Идти в лес</button>
+                    <button class="location__dungeon loc-btn">Идти в подземелье</button>
+                    <button class="location__village loc-btn">Вернуться в деревню</button>
+                </div>
+            </div>
+            <div class="rpg__event-list">
             </div>
         </div>
-        <div class="rpg__location">
-            <div class="location__now">Текущаяя локация: Выберите локацию</div>
-            <div class="location__buttons">
-                <button class="location__wood loc-btn">Идти в лес</button>
-                <button class="location__dungeon loc-btn">Идти в подземелье</button>
-                <button class="location__village loc-btn">Вернуться в деревню</button>
-            </div>
-        </div>
-        <div class="rpg__event-list">
-        </div>
+
     </div>
 </div>
 
