--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
+    <script src="startGame.js" defer></script>
     <script src="data.js" defer></script>
     <script src="script.js" defer></script>
+    <script src="combat.js" defer></script>
+    <script src="restartGame.js" defer></script>
     <title>RPG-JS</title>
 </head>
 <body>
@@ -55,19 +58,24 @@
                 </div>
             </div>
             <div class="rpg__location">
-                <div class="location__now">Текущаяя локация: Выберите локацию</div>
+                <div class="location__now">Текущая локация: Деревня</div>
                 <div class="location__ways">
                     <button class="location__bush way-btn">Осмотреть кусты</button>
-                    <button class="location__wood way-btn">Пойти навстречу шуму</button>
+                    <button class="location__wood way-btn">Пройти в глубь леса</button>
+                </div>
+                <div class="location__ways-remains">
+                    <button class="location__r way-btn">Осмотреть руины</button>
+                    <button class="location__b way-btn">Войти в храм</button>
                 </div>
                 <div class="location__buttons">
                     <button class="location__wood loc-btn">Идти в лес</button>
                     <button class="location__dungeon loc-btn">Идти в подземелье</button>
-                    <button class="location__village loc-btn">Вернуться в деревню</button>
+                    <button class="location__remains loc-btn">Руины храма</button>
                 </div>
             </div>
             <div class="rpg__event-list">
             </div>
+            <button class="restart-btn">Начать заново</button>
         </div>
 
     </div>
