--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/base/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="startGame.js" defer></script>
-    <script src="data.js" defer></script>
+    <script src="persData.js" defer></script>
     <script src="script.js" defer></script>
     <script src="combat.js" defer></script>
     <script src="restartGame.js" defer></script>
